--- a/restaurant/templates/registration/login.html
+++ b/restaurant/templates/registration/login.html
@@ -13,6 +13,11 @@
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-primary">Login</button>
                     </form>
+                    <div class="mt-3">
+                        <small class="text-muted">
+                            Don't have an account? <a href="{% url 'register' %}">Register here</a>
+                        </small>
+                    </div>
                 </div>
             </div>
         </div>
