--- a/restaurant/templates/base.html
+++ b/restaurant/templates/base.html
@@ -25,7 +25,12 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'restaurant_list' %}">Restaurants</a>
+                        <a class="nav-link" href="{% url 'restaurant_list' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'my_bookings' %}">My Bookings</a>
+                        {% endif %}
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
@@ -39,6 +44,9 @@
                         <a class="nav-link" href="{% url 'register' %}">Register</a>
                     </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
