--- a/restaurant/templates/registration/login.html
+++ b/restaurant/templates/registration/login.html
@@ -10,9 +10,15 @@
 
                     <form method="post">
                         {% csrf_token %}
-                        {{ form.as_p }}
+                        {% for field in form %}
+                        <div class="mb-3">
+                            <label class="form-label">{{ field.label }}</label>
+                            {{ field }}
+                        </div>
+                        {% endfor %}
                         <button type="submit" class="btn btn-primary">Login</button>
                     </form>
+
                     <div class="mt-3">
                         <small class="text-muted">
                             Don't have an account? <a href="{% url 'register' %}">Register here</a>
