--- a/restaurant/templates/base.html
+++ b/restaurant/templates/base.html
@@ -1,7 +1,7 @@
 {% load static %}
-{% url 'logout' as logout_url %}
-{% url 'register' as signup_url %}
-{% url 'login' as login_url %}
+{% url 'account_logout' as logout_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_login' as login_url %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -37,27 +37,20 @@
                             <a class="nav-link" href="{% url 'my_bookings' %}">My Bookings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'logout' %}">Logout</a>
+                            <a class="nav-link {% if request.path == logout_url %}active{% endif %}" href="{% url 'account_logout' %}">Logout</a>
                         </li>
                     {% else %}
+                         <li class="nav-item">
+                        <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url 'account_login' %}">Login</a>
+                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page" href="{% url 'register' %}">Register</a>
+                            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'account_signup' %}">Register</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'login' %}">Login</a>
-                        </li>
+                        
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                     </li>
-                    {% if not user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == signup_url %}active{% endif %}" href="{% url 'register' %}">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link {% if request.path == login_url %}active{% endif %}" href="{% url 'login' %}">Login</a>
-                        </li>
-                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -65,8 +58,7 @@
 
     <!-- Main Content -->
     <main>
-        {% block content %}
-        {% endblock %}
+        {% block content %}{% endblock %}
     </main>
 
     <!-- Footer -->
@@ -81,3 +73,5 @@
 </body>
 
 </html>
+
+
