Update log out to apply changes

--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -2,6 +2,8 @@
 
 {% load i18n %}
 
+{% block head_title %}{% trans "Sign Out" %}{% endblock head_title %}
+
 {% block content %}
 <div class="container mt-5">
     <div class="row justify-content-center">
