--- a/restaurant/templates/restaurant/delete_menu_item.html
+++ b/restaurant/templates/restaurant/delete_menu_item.html
@@ -1,23 +1,25 @@
-{% extends 'base.html' %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card">
-                <div class="card-header">
-                    <h2>Delete Menu Item</h2>
-                </div>
-                <div class="card-body">
-                    <p>Are you sure you want to delete "{{ menu_item.name }}"?</p>
-                    <form method="post">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">Yes, delete</button>
-                        <a href="{% url 'manage_menu' menu_item.restaurant.id %}" class="btn btn-secondary">No, go back</a>
-                    </form>
-                </div>
-            </div>
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">
+          <h2>Delete Menu Item</h2>
         </div>
+        <div class="card-body">
+          <p>Are you sure you want to delete "{{ menu_item.name }}"?</p>
+          <form method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Yes, delete</button>
+            <a
+              href="{% url 'manage_menu' menu_item.restaurant.id %}"
+              class="btn btn-secondary"
+              >No, go back</a
+            >
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
-{% endblock %} 
+{% endblock %}
