--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,49 +1,34 @@
-{% extends "base.html" %}
+{% extends "account/base.html" %}
+
+{% load i18n %}
+
+{% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-<div class="container my-5">
-    <div class="row">
-        <div class="col-md-6 mx-auto">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="card-title mb-4">Login</h2>
+    <h1>{% trans "Sign In" %}</h1>
 
-                    <!-- Display any form errors -->
-                    {% if form.errors %}
-                    <div class="alert alert-danger">
-                        Please correct the errors below.
-                    </div>
-                    {% endif %}
+    {% if socialaccount_providers %}
+        <p>{% blocktrans with site.name as site_name %}Please sign in with one of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a> for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-                    <form method="post" action="{% url 'account_login' %}">
-                        {% csrf_token %}
-                        {% for field in form %}
-                        <div class="mb-3">
-                            <label class="form-label">{{ field.label }}</label>
-                            {{ field }}
-                            {% if field.errors %}
-                            <div class="text-danger small">
-                                {{ field.errors|striptags }}
-                            </div>
-                            {% endif %}
-                        </div>
-                        {% endfor %}
-                        <button type="submit" class="btn btn-primary w-100">Login</button>
-                    </form>
-
-                    <div class="mt-3 text-center">
-                        <small class="text-muted">
-                            Don't have an account? <a href="{% url 'account_signup' %}">Sign up here</a>
-                        </small>
-                    </div>
-                    <div class="mt-2 text-center">
-                        <small class="text-muted">
-                            Forgot your password? <a href="{% url 'account_reset_password' %}">Reset it here</a>
-                        </small>
-                    </div>
-                </div>
-            </div>
+        <div class="socialaccount_ballot">
+            <ul class="socialaccount_providers">
+                {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+            </ul>
+            <div class="login-or">{% trans 'or' %}</div>
         </div>
-    </div>
-</div>
+
+        {% include "socialaccount/snippets/login_extra.html" %}
+    {% else %}
+        <p>{% blocktrans %}If you have not created an account yet, then please <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+    {% endif %}
+
+    <form class="login" method="POST" action="{% url 'account_login' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+    </form>
 {% endblock %}
