--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,20 +1,22 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="container my-5">
-    <div class="row">
-        <div class="col-md-6 mx-auto text-center">
-            <div class="card shadow-sm">
-                <div class="card-body">
-                    <h2 class="mb-4">Logged Out</h2>
-                    <p>You have been successfully logged out.</p>
-                    <div class="mt-3">
-                        <a href="{% url 'login' %}" class="btn btn-primary">Log In Again</a>
-                        <a href="{% url 'restaurant_list' %}" class="btn btn-outline-secondary ms-2">Home</a>
-                    </div>
-                </div>
-            </div>
+  <div class="row">
+    <div class="col-md-6 mx-auto text-center">
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <h2 class="mb-4">Logged Out</h2>
+          <p>You have been successfully logged out.</p>
+          <div class="mt-3">
+            <a href="{% url 'login' %}" class="btn btn-primary">Log In Again</a>
+            <a
+              href="{% url 'restaurant_list' %}"
+              class="btn btn-outline-secondary ms-2"
+              >Home</a
+            >
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
 {% endblock %}
