--- a/templates/restaurant/delete_booking.html
+++ b/templates/restaurant/delete_booking.html
@@ -1,32 +1,37 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card">
-                <div class="card-header">
-                    <h2 class="text-center">Delete Booking</h2>
-                </div>
-                <div class="card-body">
-                    <p class="text-center">Are you sure you want to delete this booking?</p>
-                    <div class="booking-details mb-4">
-                        <p><strong>Restaurant:</strong> {{ booking.restaurant.name }}</p>
-                        <p><strong>Date:</strong> {{ booking.date }}</p>
-                        <p><strong>Time:</strong> {{ booking.time }}</p>
-                        <p><strong>Number of Guests:</strong> {{ booking.number_of_guests }}</p>
-                    </div>
-                    <form method="post">
-                        {% csrf_token %}
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-danger">Delete Booking</button>
-                            <a href="{% url 'my_bookings' %}" class="btn btn-secondary">Cancel</a>
-                        </div>
-                    </form>
-                </div>
-            </div>
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">
+          <h2 class="text-center">Delete Booking</h2>
         </div>
+        <div class="card-body">
+          <p class="text-center">
+            Are you sure you want to delete this booking?
+          </p>
+          <div class="booking-details mb-4">
+            <p><strong>Restaurant:</strong> {{ booking.restaurant.name }}</p>
+            <p><strong>Date:</strong> {{ booking.date }}</p>
+            <p><strong>Time:</strong> {{ booking.time }}</p>
+            <p>
+              <strong>Number of Guests:</strong> {{ booking.number_of_guests }}
+            </p>
+          </div>
+          <form method="post">
+            {% csrf_token %}
+            <div class="d-grid gap-2">
+              <button type="submit" class="btn btn-danger">
+                Delete Booking
+              </button>
+              <a href="{% url 'my_bookings' %}" class="btn btn-secondary"
+                >Cancel</a
+              >
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
-{% endblock %} 
+{% endblock %}
